--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<li><a class="active" href="#">主页</a></li>
 		<li><a href="https://publish.obsidian.md/csj-obsidian/1+-+Archives/Input+Method/%E8%99%8E%E7%A0%81/%E8%99%8E%E7%A0%81%E6%95%99%E7%A8%8B">教程</a></li>
 		<li><a href="http://106.52.252.177/download/">下载</a></li>
-
+		<li><a href="https://jq.qq.com/?_wv=1027&k=9HbSlI3Z">加群学习: 775237860</a></li></li>
 	</ul>	
 
 <div class="top">
@@ -129,6 +129,7 @@
 
 		.top {
             margin: auto;
+
             text-align: center;
 			width: 100%;	
 			font-size: small;		
@@ -136,7 +137,7 @@
 
 
 		.floatleft {
-            margin: auto;
+            margin: 0.3rem;
             text-align: center;
 			float: left;
 		
@@ -145,7 +146,7 @@
 
 
 		.floatright {
-            margin: auto;
+            margin: 0.3rem;
             text-align: center;
 			float: right;
 			clear: right;
