--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 		}
 
 		li {
+			font-size: 0.8rem;
 			float: left;
 		}
 
@@ -77,7 +78,7 @@
 			display: block;
 			color: white;
 			text-align: center;
-			padding: 14px 16px;
+			padding: 0.6rem;
 			text-decoration: none;
 		}
 
