--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<ul>
 		<li><a class="active" href="#">主页</a></li>
 		<li><a href="https://publish.obsidian.md/csj-obsidian/1+-+Archives/Input+Method/%E8%99%8E%E7%A0%81/%E8%99%8E%E7%A0%81%E6%95%99%E7%A8%8B">教程</a></li>
-		<li><a href="http://106.52.252.177/download/">下载</a></li>
+		<li><a href="http://huma.ysepan.com/">下载</a></li>
 		<li><a href="https://jq.qq.com/?_wv=1027&k=9HbSlI3Z">加群学习: 775237860</a></li></li>
 	</ul>	
 
@@ -93,21 +93,13 @@
             src: url("TumanPUA.ttf");
         }
 
-        #root {
-            font-family: 'TumanPUA';
-			font-size: 3rem;
-			margin: auto;
-            text-align: center;
-			width: 100%;
-        }
+	#root {
+	  font-family: TumanPUA, Simsun, Simsum-ExtB, Simsun-ExtG, TH-Sung-TP2, TH-Sung-TP0, serif, sans-serif;
+	}
 
-        #code {
-            font-family: 'TumanPUA';
-			margin: auto;
-			font-size: 1.5rem;
-            text-align: center;
-			width: 100%;
-        }
+	#code {
+	  font-family: Consolas, Lucida Console, Helvetica, Arial, Times New Roman, Georgia, sans-serif, serif;
+	}
 
 		#tip {
 			font-size: smaller;
