--- a/index.html
+++ b/index.html
@@ -95,10 +95,18 @@
 
 	#root {
 	  font-family: TumanPUA, Simsun, Simsum-ExtB, Simsun-ExtG, TH-Sung-TP2, TH-Sung-TP0, serif, sans-serif;
+		margin: auto;
+		font-size: 3rem;
+		text-align: center;
+		width: 100%;
 	}
 
 	#code {
-	  font-family: Consolas, Lucida Console, Helvetica, Arial, Times New Roman, Georgia, sans-serif, serif;
+	  	font-family: Consolas, Lucida Console, Helvetica, Arial, Times New Roman, Georgia, sans-serif, serif;
+		margin: auto;
+		font-size: 1.5rem;
+		text-align: center;
+		width: 100%;
 	}
 
 		#tip {
